[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Door/Door.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="BoxShape" id=6]

[node name="Door" type="Spatial"]
transform = Transform( 2.00858, 0, 0, 0, 2.00858, 0, 0, 0, 1, -5, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="door_inside" type="StaticBody" parent="."]
transform = Transform( 2.255, 0, 0, 0, 2, 0, 0, 0, 0.1, 2.45336, 1.99146, 0 )

[node name="door_mesh" type="MeshInstance" parent="door_inside"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.77809, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="door_inside"]
shape = SubResource( 3 )

[node name="Frame" type="StaticBody" parent="."]
transform = Transform( 0.2, 0, 0, 0, 2, 0, 0, 0, 0.2, 0, 1.99146, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Frame"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Frame"]
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="Frame2" type="StaticBody" parent="."]
transform = Transform( 0.2, 0, 0, 0, 2, 0, 0, 0, 0.2, 4.90894, 1.99146, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Frame2"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Frame2"]
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.48932, 1.99146, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2.6885, 0, 0, 0, 1.77399, 0, 0, 0, 4.54657, 0, -0.28763, 0 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
